tests/ui/once_by_key_rejected.rs
use cached::macros::once;

#[once(sync_writes = "by_key")]
fn my_fn(k: i32) -> i32 {
    k
}

fn main() {}
